# Anomaly

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  README.md  build.bat  premake5.lua
Anomaly/: Anomaly.vcxproj.filters
Anomaly/src/: Anomaly.h  EngineDefines.cpp  EngineDefines.h  anompch.cpp  anompch.h
Anomaly/src/Core/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Log.h  Window.cpp  Window.h
Anomaly/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Anomaly/src/Game/: Game.h
Anomaly/src/Renderer/: Renderer.cpp  Renderer.h
AnomalyEditor/: CMakeLists.txt
AnomalyEditor/src/: AnomalyEditor.cpp
AnomalyEngine/: CMakeLists.txt
AnomalyEngine/src/: CommonHeaders.h  EngineDefines.h
AnomalyEngine/src/Core/: Application.cpp  Application.h  Asserts.h  DataStructures.h  EntryPoint.h  Event.cpp  Event.h  Input.cpp  Input.h  Logger.cpp  Logger.h
AnomalyEngine/src/Graphics/: GraphicsPlatformInterface.h  RenderSurface.cpp  RenderSurface.h  RenderUtils.cpp  RenderUtils.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
AnomalyEngine/src/Platform/: Platform.h  Window.cpp  Window.h
AnomalyEngine/src/Platform/D3D12/: D3D12_CommonHeaders.h  D3D12_Core.cpp  D3D12_Core.h  D3D12_Interface.cpp  D3D12_Interface.h  D3D12_Resources.cpp  D3D12_Resources.h  D3D12_Surface.cpp  D3D12_Surface.h  D3D12_Texture.cpp  D3D12_Texture.h  d3dx12.h
AnomalyEngine/src/Platform/Windows/: PlatformWindows.cpp  PlatformWindows.h  WindowsWindow.cpp  WindowsWindow.h
Commands/: BuildAll.bat  BuildDebug.bat  BuildRelease.bat  Clean.bat  GenerateProject.bat
Editor/src/: EditorApp.cpp  Main.cpp
Game_Content/src/: GameDefines.cpp  GameDefines.h  Game_Content.cpp  Game_Content.h
Game_Executable/src/: Main.cpp
TestProject/: imgui.ini
